--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 evm_version = "cancun"
-solc = '0.8.24'
+solc = '0.8.26'
+ffi = true
+via_ir = false
+optimizer_runs = 800
+fs_permissions = [{ access = "read", path = "./"}]
 
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
